--- a/Receitas/Html, css e JavaScript/6.Objetos JSON/index.html
+++ b/Receitas/Html, css e JavaScript/6.Objetos JSON/index.html
@@ -53,7 +53,7 @@
                 `<tr>
                     ${propriedade.map(p => 
                         `<td>${item[p]}</td>`
-                    )}
+                    ).join("")}
                 </tr>`
             )          
 
