Atualização nos títulos das páginas

--- a/Receitas/Html, css e JavaScript/1.HTML Básico/index.html
+++ b/Receitas/Html, css e JavaScript/1.HTML Básico/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Poetas e Poemas</title>
+        <title>Receita 1</title>
         <style>
             table, th, td{
                 border: 1px solid black;
