--- a/Receitas/Html, css e JavaScript/4.JavaScript básico 2/index.html
+++ b/Receitas/Html, css e JavaScript/4.JavaScript básico 2/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">    
         <link href="estilo.css" rel="stylesheet">  
+        <title>Receita 4</title>
     </head>
  
     <body>
