--- a/Receitas/Html, css e JavaScript/3.JavaScript básico/index.html
+++ b/Receitas/Html, css e JavaScript/3.JavaScript básico/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">     
         <link href="estilo.css" rel="stylesheet"> 
+        <title>Receita 3</title>
     </head>
 
     <body>
