--- a/Receitas/Html, css e JavaScript/5.JS - Arrow e Callback Functions/index.html
+++ b/Receitas/Html, css e JavaScript/5.JS - Arrow e Callback Functions/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="estilo.css">
+        <title>Receita 5</title>
     </head>
 
     <body>
