--- a/Receitas/Html, css e JavaScript/6.Objetos JSON/index.html
+++ b/Receitas/Html, css e JavaScript/6.Objetos JSON/index.html
@@ -4,6 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="estilo.css">
+        <title>Receita 6 - Objetos JSON</title>
     </head>
 
     <body>
