--- a/Receitas/React/React #1/react_example/index.html
+++ b/Receitas/React/React #1/react_example/index.html
@@ -89,7 +89,7 @@
                 "Cachaça": "Áurea Custódio",
                 "Cidade": "Ribeirão das Neves",
                 "UF": "MG",
-                "Graduação": ""
+                "Graduação": "45,00%"
             },
             {
                 "id": 10,
