--- a/Receitas/Html, css e JavaScript/8.Promessas/index.html
+++ b/Receitas/Html, css e JavaScript/8.Promessas/index.html
@@ -10,13 +10,16 @@
 <body>    
     <h1>Requisição à API</h1>
     <div id="cervejasDiv"></div>    
-    <div id="butao">
+    <div id="div-api">
+        <div id="butao"></div>
         <button id="botaoCarregar">Carregar Cervejas</button>
     </div>
 
-    <div id="color-div"></div>    
-    <div id="butao">
-        <button id="color">Carregar Cores</button>
+    <div id="div-api">
+        <div id="color-div"></div>    
+        <div id="butao">
+            <button id="color">Carregar Cores</button>
+        </div>
     </div>
 
                
